# iamf-tools

./: .bazelrc  BUILD  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE
.github/actions/iamf-tools-builder/: action.yml
.github/actions/iamf-tools-test-suite-generator/: action.yml
.github/workflows/: ci.yml  deploy_gh_pages.yml
docs/: build_instructions.md  iamf_decoder_main.md  iamf_encoder_interface.md  iamf_encoder_main.md  iamf_probe_main.md
gh_pages/: index.html
gh_pages/web_demo/: app_bundle.js  decoder_worker_bundle.js  index.html  styles.css
gh_pages/web_demo/data/: 7_1_4_Flac.iamf  7_1_4_Opus.iamf
iamf/: BUILD  aac_decoder_config.cc  aac_decoder_config.h  arbitrary_obu.cc  arbitrary_obu.h  audio_element.cc  audio_element.h  audio_frame.cc  audio_frame.h  bit_buffer_util.cc  bit_buffer_util.h  codec_config.cc  codec_config.h  demixing_info_param_data.cc  demixing_info_param_data.h  flac_decoder_config.cc  flac_decoder_config.h  ia.h  ia_sequence_header.cc  ia_sequence_header.h  lpcm_decoder_config.cc  lpcm_decoder_config.h  mix_presentation.cc  mix_presentation.h  obu_base.cc  obu_base.h  obu_header.cc  obu_header.h  obu_util.cc  obu_util.h  opus_decoder_config.cc  opus_decoder_config.h  param_definitions.cc  param_definitions.h  parameter_block.cc  parameter_block.h  read_bit_buffer.cc  read_bit_buffer.h  temporal_delimiter.h  write_bit_buffer.cc  (+1 more)
iamf/api/: BUILD  iamf_decoder.cc  iamf_decoder.h  iamf_tools_api_types.cc  iamf_tools_api_types.h  types.h
iamf/api/conversion/: BUILD  channel_reorderer.cc  channel_reorderer.h  mix_presentation_conversion.cc  mix_presentation_conversion.h  profile_conversion.cc  profile_conversion.h
iamf/api/decoder/: BUILD  README.md  iamf_decoder.cc  iamf_decoder.h  iamf_decoder_factory.cc
iamf/api/encoder/: BUILD  README.md  iamf_encoder_factory.cc
iamf/api/internal_utils/: BUILD  internal_utils.cc  internal_utils.h  internal_utils_test.cc
iamf/api/tests/: BUILD  iamf_decoder_test.cc
iamf/cli/: BUILD  aac_encoder_decoder.cc  aac_encoder_decoder.h  ambisonics_mixer.cc  ambisonics_mixer.h  ambisonics_projection_util.cc  ambisonics_projection_util.h  arbitrary_obu_generator.cc  arbitrary_obu_generator.h  audio_element_generator.cc  audio_element_generator.h  audio_element_with_data.h  audio_frame_decoder.cc  audio_frame_decoder.h  audio_frame_generator.cc  audio_frame_generator.h  audio_frame_with_data.h  build_info.cc  build_info.h  channel_label.cc  channel_label.h  cli_util.cc  cli_util.h  codec_config_generator.cc  codec_config_generator.h  decoder_base.h  decoder_main.cc  demixing_module.cc  demixing_module.h  descriptor_obu_parser.cc  descriptor_obu_parser.h  descriptor_obus.cc  descriptor_obus.h  encoder_base.cc  encoder_base.h  encoder_main.cc  encoder_main_lib.cc  encoder_main_lib.h  flac_encoder_decoder.cc  flac_encoder_decoder.h  (+80 more)
iamf/cli/adm_to_user_metadata/: README.md
iamf/cli/ambisonic_encoder/: BUILD  ambisonic_encoder.cc  ambisonic_encoder.h  ambisonic_utils.h  associated_legendre_polynomials_generator.cc  associated_legendre_polynomials_generator.h
iamf/cli/codec/: BUILD  aac_decoder.cc  aac_decoder.h  aac_encoder.cc  aac_encoder.h  aac_encoder_decoder.cc  aac_encoder_decoder.h  aac_utils.cc  aac_utils.h  decoder_base.h  encoder_base.cc  encoder_base.h  flac_decoder.cc  flac_decoder.h  flac_decoder_stream_callbacks.cc  flac_decoder_stream_callbacks.h  flac_encoder.cc  flac_encoder.h  flac_encoder_decoder.cc  flac_encoder_decoder.h  flac_encoder_windows.cc  lpcm_decoder.cc  lpcm_decoder.h  lpcm_encoder.cc  lpcm_encoder.h  opus_decoder.cc  opus_decoder.h  opus_encoder.cc  opus_encoder.h  opus_encoder_decoder.cc  opus_encoder_decoder.h  opus_utils.cc  opus_utils.h
iamf/cli/itu_1770_4/: BUILD  (+4 more)
iamf/cli/proto/: BUILD  (+18 more)
iamf/common/: BUILD  bit_buffer_util.cc  bit_buffer_util.h  leb_generator.cc  macros.h  map_utils.h  numeric_utils.cc  numeric_utils.h  obu_util.cc  obu_util.h  q_format_or_floating_point.cc  q_format_or_floating_point.h  read_bit_buffer.cc  read_bit_buffer.h  validation_utils.h  write_bit_buffer.cc  write_bit_buffer.h
iamf/obu/: BUILD  ambisonics_config.cc  ambisonics_config.h  arbitrary_obu.cc  arbitrary_obu.h  audio_element.cc  audio_element.h  audio_frame.cc  audio_frame.h  cart16_parameter_data.cc  cart16_parameter_data.h  cart8_parameter_data.cc  cart8_parameter_data.h  codec_config.cc  codec_config.h  demixing_info_param_data.cc  demixing_info_param_data.h  demixing_info_parameter_data.cc  demixing_info_parameter_data.h  demixing_param_definition.cc  demixing_param_definition.h  dual_cart16_parameter_data.cc  dual_cart16_parameter_data.h  dual_cart8_parameter_data.cc  dual_cart8_parameter_data.h  dual_polar_parameter_data.cc  dual_polar_parameter_data.h  element_gain_offset_config.cc  element_gain_offset_config.h  extension_parameter_data.cc  extension_parameter_data.h  ia_sequence_header.cc  ia_sequence_header.h  leb128.h  metadata_obu.cc  metadata_obu.h  mix_gain_parameter_data.cc  mix_gain_parameter_data.h  mix_presentation.cc  mix_presentation.h  (+20 more)
iamf/tests/: BUILD  aac_decoder_config_test.cc  arbitrary_obu_test.cc  audio_element_test.cc  audio_frame_test.cc  bit_buffer_util_test.cc  codec_config_test.cc  demixing_info_param_data_test.cc  flac_decoder_config_test.cc  ia_sequence_header_test.cc  lpcm_decoder_config_test.cc  mix_presentation_test.cc  obu_base_test.cc  obu_header_test.cc  obu_test_base.cc  obu_test_base.h  obu_util_test.cc  opus_decoder_config_test.cc  param_definitions_test.cc  parameter_block_test.cc  read_bit_buffer_test.cc  temporal_delimiter_test.cc  test_utils.cc  test_utils.h  write_bit_buffer_test.cc
validation/iamf_loudness_comparator/: BUILD  iamf_loudness_comparator.cc  iamf_loudness_comparator.h  iamf_loudness_comparator_main.cc
validation/iamf_verifier/: BUILD  README.md  iamf_verifier.py  requirements.txt
validation/mlsd_comparator/: README.md  mlsd_comparator.py  mlsd_comparator_main.py  mlsd_comparator_test.py
validation/opus_hoa/: BUILD  README.md  mapping_matrix.h  opus_hoa.cc  opus_hoa.h  opus_hoa_main.cc
(+776 files in other folders)
