###############################################################################
# This project is now using bazelmod to manage some dependencies.
# Some still remain in WORKSPACE.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "iamf_tools",
    version = "1.0.0",
)

# Bazel central registry dependencies.
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)
bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "protobuf",
    version = "28.3",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "fuzztest",
    version = "20241028.0",
    repo_name = "com_google_fuzztest",
)
bazel_dep(
    name = "google_benchmark",
    version = "1.8.5",
    repo_name = "com_google_benchmark",
)
bazel_dep(
    name = "eigen",
    version = "3.4.0",
)
bazel_dep(name = "platforms", version = "0.0.11")

# Some modules are not yet available in the bazel central registry. We use git_repository for all of
# them, and provide custom BUILD files for projects that are not bazel-native.
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_google_audio_to_tactile",
    commit = "d3f449fdfd8cfe4a845d0ae244fce2a0bca34a15",
    remote = "https://github.com/google/audio-to-tactile.git",
)

# Expat.
git_repository(
    name = "libexpat",
    build_file = "@//external:libexpat.BUILD",
    commit = "fa75b96546c069d17b8f80d91e0f4ef0cde3790d",
    remote = "https://github.com/libexpat/libexpat.git",
)

# FDK AAC.
git_repository(
    name = "fdk_aac",
    build_file = "@//external:fdk_aac.BUILD",
    commit = "38c27d428ee223bf32f0a2a07cae9fcb99cf3cae",
    remote = "https://android.googlesource.com/platform/external/aac",
)

# Opus.
git_repository(
    name = "libopus",
    build_file = "@//external:libopus.BUILD",
    commit = "82ac57d9f1aaf575800cf17373348e45b7ce6c0d",
    remote = "https://gitlab.xiph.org/xiph/opus.git",
)
