###############################################################################
# This project uses bazelmod to manage dependencies.
#
# For more details, please check https://bazel.build/external/module.
###############################################################################

module(
    name = "iamf_tools",
    version = "1.0.0",
)

# Bazel central registry dependencies.
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "abseil-cpp", version = "20250512.1")
bazel_dep(
    name = "googletest",
    version = "1.17.0",
    repo_name = "com_google_googletest",
)
bazel_dep(
    name = "protobuf",
    version = "32.0",
    repo_name = "com_google_protobuf",
)
bazel_dep(
    name = "fuzztest",
    version = "20250805.0",
    repo_name = "com_google_fuzztest",
)
bazel_dep(
    name = "google_benchmark",
    version = "1.9.4",
    repo_name = "com_google_benchmark",
)
bazel_dep(
    name = "eigen",
    version = "3.4.0.bcr.3",
)
bazel_dep(name = "platforms", version = "1.0.0")

# Android NDK dependencies for Andoid builds.
# Note that this does not fetch the Android NDK itself.  If building Android builds, an environment
# variable ANDROID_NDK_HOME needs to be set to the directory containing the Android NDK.
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

# Some modules are not yet available in the bazel central registry. We use git_repository for all of
# them, and provide custom BUILD files for projects that are not bazel-native.
git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "com_google_audio_to_tactile",
    commit = "d3f449fdfd8cfe4a845d0ae244fce2a0bca34a15",
    remote = "https://github.com/google/audio-to-tactile.git",
)

git_repository(
    name = "com_google_loudness_ebur128",
    commit = "e9e73147637db60dc742cba8a611a37dd72b14b5",
    remote = "https://github.com/google/loudness_ebur128.git",
)

git_repository(
    name = "com_google_obr",
    commit = "2e1f19abbd4280182a90488261d526757bd56cc8",
    remote = "https://github.com/google/obr.git",
)

# Expat.
git_repository(
    name = "libexpat",
    build_file = "@//external:libexpat.BUILD",
    commit = "fa75b96546c069d17b8f80d91e0f4ef0cde3790d",
    remote = "https://github.com/libexpat/libexpat.git",
)

# FDK AAC.
git_repository(
    name = "fdk_aac",
    build_file = "@//external:fdk_aac.BUILD",
    commit = "ee76460efbdb147e26d804c798949c23f174460b",
    remote = "https://android.googlesource.com/platform/external/aac",
)

# FLAC.
git_repository(
    name = "flac",
    build_file = "@//external:flac.BUILD",
    commit = "8d648456a2d7444d54a579e365bab4c815ac6873",
    remote = "https://github.com/xiph/flac.git",
)

# Opus.
git_repository(
    name = "libopus",
    build_file = "@//external:libopus.BUILD",
    commit = "ddbe48383984d56acd9e1ab6a090c54ca6b735a6",
    remote = "https://gitlab.xiph.org/xiph/opus.git",
)
